# IFJ15

./: .gitignore  CMakeLists.txt  DOKUMENTACE.docx  DOKUMENTACE.odt  LLgramatika.txt  Makefile  Makefile.deps  README.md  ast.c  ast.h  common.h  errors.c  errors.h  finite.c  finite.h  functions.h  gc.c  gc.h  ial.c  ial.h  input.c  input.h  instruction.h  interpret.c  interpret.h  main.c  main2.c  parser.c  parser.h  release  rozdeleni  scanner.c  scanner.h  stack.c  stack.h  string.c  string.h  symbol_table.c  symbol_table.h  test.c  (+2 more)
programs/: Makefile  SIGFPE_bad1_9.cc  _priklad_dokumentaci.ifj  base.ifj  bui_concat-1_0_output.ifj  bui_concat-2_0_output.ifj  bui_concat-3_4.ifj  bui_find-1_0_output.ifj  bui_length-1_0_output.ifj  bui_length-2_0_output.ifj  bui_length-3_4.ifj  bui_sort-1_0_output.ifj  bui_sort-2_0_output.ifj  bui_substr-1_0_output.ifj  bui_substr-2_0_output.ifj  escape-sec_ok_0.cc  escape-sort_ok_0.ifj  escape_ok_0.ifj  fibbonacci_1_1.ifj  fibbonacci_2_1.ifj  fibbonacci_3_1.ifj  fibbonacci_ok_0.ifj  hello_world.ifj  int_auto-1_0_output.ifj  int_auto-2_0_output.ifj  int_auto-3_0_output.ifj  int_auto-4_5.ifj  int_cout-expr-complex_0_output.ifj  int_cout-expr-simple_0.ifj  int_cout-expr-simple_0_output.ifj  int_cout-s-vyrazy_0_output.ifj  int_cout_0.ifj  int_cout_0_output.ifj  int_cout_expr-comlex_0.ifj  int_equal_0_output.ifj  int_faktorial_0_input_output.ifj  int_for-complex_0.ifj  int_for-complex_0_output.ifj  int_for-simple_0.ifj  int_for-simple_0_output.ifj  (+186 more)
programs/lexikal_neresi/: lex_bez-mezer-5_0.ifj  lex_escape-sekcence-2_0.ifj  (+4 more)
(+23 files in other folders)
